# Dashboard

./: .env.example  .gitignore  API_DOCUMENTATION.md  API_INTEGRATION_GUIDE.md  DEPLOYMENT.md  README.md  SUPABASE_SETUP.md  alertas.py  api.py  app.jsx  backfill.py  backfill_may.py  components.jsx  cpee_engine.py  daily_report.py  data_collector.py  database.py  docker-compose.override.yml  docker-compose.yml  import_csv.py  import_xlsx_backup_camp.py  import_xlsx_ca.py  import_xlsx_princ.py  index.html  models.py  populate_criativos_clusters.py  populate_demografia_horarios.py  render.yaml  requirements.txt  scheduler.py  seed_municipios.py  start_dashboard.sh  styles.css  supabase.jsx  vercel.json
.claude/: launch.json
.github/: deploy-vercel.yml.pending
.github/workflows/: backend-tests.yml  frontend-e2e.yml  frontend-tests.yml
backend/: .env.example  conftest.py  pyproject.toml  pytest.ini  requirements.txt
backend/api/: index.py
backend/app/: main.py
backend/app/api/: __init__.py  comparacoes.py  dashboard.py  export.py  insights.py  overview.py  previsoes.py  sync.py
backend/app/dependencies/: auth.py  rate_limit.py
backend/app/models/: __init__.py  database.py  models.py  schemas.py
backend/app/services/: meta_ads_service.py  prediction_engine.py  recommendation_engine.py  sentiment_analyzer.py
backend/tests/: test_api.py  test_api_overview.py  test_auth.py  test_database.py  test_export.py  test_main.py  test_predictions.py  test_rate_limit.py  test_recommendations.py  test_sentiment.py
dashboard/: index.html
docs/: INTEGRACAO_PARCEIRO.md  INTEGRACAO_POLIJETRO.md
docs/superpowers/plans/: 2026-05-09-cpee-dashboard-implementation.md  2026-05-15-vps-deploy-seguranca.md  2026-05-27-cpee-dashboard-supabase-direct.md
docs/superpowers/specs/: 2026-05-09-cpee-dashboard-redesign.md  2026-05-27-cpee-dashboard-supabase-direct.md
frontend/: .env.local.example  jest.config.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/__tests__/: api.test.ts  comparacoes.test.tsx  insights.test.tsx  overview.test.tsx
frontend/app/: globals.css  layout.tsx  providers.tsx
frontend/lib/: api.ts  compute.ts  export.ts  queries.ts  realtime.ts  supabase.ts  types.ts
frontend/tests/: overview.spec.ts
nginx/: nginx.conf
supabase/.temp/: linked-project.json  pooler-url  project-ref
(+53 files in other folders)
