[project]
name = "cpee-dashboard-backend"
version = "0.1.0"
description = "CPEE Dashboard Backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.136.1",
    "uvicorn==0.24.0",
    "sqlalchemy==2.0.49",
    "pydantic==2.13.4",
    "python-multipart==0.0.6",
    "python-dotenv==1.0.0",
    "requests==2.31.0",
    "textblob==0.17.1",
    "nltk==3.8.1",
    "psycopg2-binary==2.9.9",
    "httpx==0.28.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--tb=short",
    "--cov=app",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=70"
]
markers = [
    "asyncio: marks tests as async",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "slow: marks tests as slow"
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/venv/*",
    "*/site-packages/*",
    "*/__pycache__/*",
    "*/tests/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
